Update landing page for Joya Spa Medellin

--- a/joya-spa-medellin-90656874/index.html
+++ b/joya-spa-medellin-90656874/index.html
@@ -374,7 +374,7 @@
                     </div>
 
                     <div class="rounded-3xl overflow-hidden shadow-2xl border-8 border-white">
-                        <iframe src="https://www.google.com/maps/embed/v1/place?key=YOUR_GOOGLE_MAPS_KEY_HERE&q=Joya+Spa+Medellin+Cra.+35+#15b-35,+El+Poblado,+Medellín,+El+Poblado,+Medellín,+Antioquia,+Colombia" class="w-full h-[500px]" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://maps.google.com/maps?q=Joya+Spa+Medellin+Cra.+35+#15b-35,+El+Poblado,+Medellín,+El+Poblado,+Medellín,+Antioquia,+Colombia&t=&z=13&ie=UTF8&iwloc=&output=embed" class="w-full h-[500px]" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
             </div>
