Update landing page for Joya Spa Medellin

--- a/joya-spa-medellin-90656874/index.html
+++ b/joya-spa-medellin-90656874/index.html
@@ -374,7 +374,16 @@
                     </div>
 
                     <div class="rounded-3xl overflow-hidden shadow-2xl border-8 border-white">
-                        <iframe src="https://maps.google.com/maps?q=Joya+Spa+Medellin+Cra.+35+#15b-35,+El+Poblado,+Medellín,+El+Poblado,+Medellín,+Antioquia,+Colombia&t=&z=13&ie=UTF8&iwloc=&output=embed" class="w-full h-[500px]" allowfullscreen="" loading="lazy"></iframe>
+                        
+    <div class="relative w-full h-80 rounded-2xl shadow-lg overflow-hidden bg-slate-100 border border-slate-200">
+        <iframe src="https://www.google.com/maps?q=Joya+Spa+Medellin+Cra.+35+%2315b-35%2C+El+Poblado%2C+Medell%C3%ADn%2C+El+Poblado%2C+Medell%C3%ADn%2C+Antioquia%2C+Colombia&hl=es&z=14&output=embed" class="absolute inset-0 w-full h-full border-0 z-10" allowfullscreen="" loading="lazy"></iframe>
+        <div class="absolute inset-0 flex flex-col items-center justify-center p-6 text-center bg-slate-50">
+            <i class="fa-solid fa-map-location-dot text-4xl text-slate-300 mb-2"></i>
+            <p class="text-slate-500 text-sm mb-4">La vista interactiva puede tardar en cargar</p>
+            <a href="https://www.google.com/maps/search/?api=1&query=Joya+Spa+Medellin+Cra.+35+%2315b-35%2C+El+Poblado%2C+Medell%C3%ADn%2C+El+Poblado%2C+Medell%C3%ADn%2C+Antioquia%2C+Colombia" target="_blank" class="inline-block bg-rose-500 text-white py-2 px-6 rounded-full text-sm font-bold shadow-lg hover:bg-rose-600 transition-colors">Ver en Google Maps</a>
+        </div>
+    </div>
+    
                     </div>
                 </div>
             </div>
