--- a/cimevet-clnica-veterinaria-ac015afd/index.html
+++ b/cimevet-clnica-veterinaria-ac015afd/index.html
@@ -265,7 +265,7 @@
                 <div class="w-full lg:w-1/2 relative">
                     <div class="absolute -inset-4 bg-indigo-200 rounded-2xl rotate-3 -z-10"></div>
                     <div class="bg-slate-900 rounded-2xl shadow-2xl overflow-hidden aspect-video lg:aspect-square">
-                        <img src="https://images.unsplash.com/photo-1584132967334-10e028bd69f7?auto=format&fit=crop&w=800&q=80" alt="Equipo Veterinario" class="w-full h-full object-cover">
+                        <img src="https://images.unsplash.com/photo-1596272875729-ed2ff7d6d9c5?auto=format&fit=crop&w=800&q=80" alt="Veterinario atendiendo mascota" class="w-full h-full object-cover">
                     </div>
                 </div>
             </div>
