Update landing page for Maika Medicina Estética

--- a/maika-medicina-esttica-500df4b9/index.html
+++ b/maika-medicina-esttica-500df4b9/index.html
@@ -106,7 +106,7 @@
     <section id="inicio" class="relative h-screen flex items-center justify-center overflow-hidden">
         <!-- BG Image -->
         <div class="absolute inset-0 z-0">
-            <img src="https://streetviewpixels-pa.googleapis.com/v1/thumbnail?panoid=LgZYzE566lP3htVAM3HXsQ&cb_client=maps_sv.tactile.gps&w=1200&h=800&yaw=213.66768&pitch=0&thumbfov=100" class="w-full h-full object-cover" alt="Maika Medicina Estética">
+            <img src="https://images.unsplash.com/photo-1616394584738-fc6e612e71b9?q=80&w=1920&auto=format&fit=crop" class="w-full h-full object-cover" alt="Maika Medicina Estética">
             <div class="absolute inset-0 bg-slate-900/60 backdrop-blur-[2px]"></div>
         </div>
 
@@ -170,7 +170,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             <!-- Main Service Card -->
             <div class="md:col-span-2 relative group overflow-hidden rounded-3xl bg-slate-900 h-80 md:h-auto min-h-[400px]" data-aos="fade-up">
-                <img src="https://lh3.googleusercontent.com/p/AF1QipNhHINxf1_o3C8etBIoKIDS1fTzqfQUpEdjEzHK=w1920-h1080-k-no" class="absolute inset-0 w-full h-full object-cover opacity-60 group-hover:scale-110 transition-transform duration-700" alt="Skin Care Clinic">
+                <img src="https://images.unsplash.com/photo-1512290923902-8a9f81dc236c?q=80&w=1200&auto=format&fit=crop" class="absolute inset-0 w-full h-full object-cover opacity-60 group-hover:scale-110 transition-transform duration-700" alt="Skin Care Clinic">
                 <div class="absolute inset-0 bg-gradient-to-t from-slate-900 via-transparent to-transparent"></div>
                 <div class="absolute bottom-0 p-10">
                     <div class="bg-primary text-white w-12 h-12 rounded-xl flex items-center justify-center mb-4 shadow-lg">
@@ -267,7 +267,7 @@
             <div class="lg:w-1/2 relative" data-aos="fade-left">
                 <div class="absolute -top-4 -left-4 w-24 h-24 bg-teal-200 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-pulse"></div>
                 <div class="absolute -bottom-4 -right-4 w-32 h-32 bg-primary/20 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-pulse"></div>
-                <img src="https://lh3.googleusercontent.com/p/AF1QipOcDTYFQ_0E_AeUNVz4DkfHCXONbfbxPCrUVkNL=w1920-h1080-k-no" class="relative rounded-3xl shadow-2xl z-10 w-full object-cover" alt="Instalaciones Maika">
+                <img src="https://images.unsplash.com/photo-1629909613654-28e377c37b09?q=80&w=1200&auto=format&fit=crop" class="relative rounded-3xl shadow-2xl z-10 w-full object-cover" alt="Instalaciones Maika">
             </div>
         </div>
     </section>
@@ -425,26 +425,7 @@
 <script
   src="https://hookloop-api.onrender.com/static/widget.js"
   data-workspace-id="ccb07c00-9d94-47ac-8fb9-5cd7124cbbf4"
-  data-artifact-id="faf66b01-a350-4892-956d-f6a7f0d339f9"
-  data-lead-id="50199373-c8b8-41a7-8da0-90f5c617c182"
-  async>
-</script>
-</body>
-</html><!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maika Medicina Estética | Skin Care Clinic Medellín</title>
-</head>
-<body>
-    
-
-<!-- HookLoop Tracking Widget -->
-<script
-  src="https://hookloop-api.onrender.com/static/widget.js"
-  data-workspace-id="ccb07c00-9d94-47ac-8fb9-5cd7124cbbf4"
-  data-artifact-id="faf66b01-a350-4892-956d-f6a7f0d339f9"
+  data-artifact-id="5b43d261-dc1e-487f-8be6-d08b35d016bd"
   data-lead-id="50199373-c8b8-41a7-8da0-90f5c617c182"
   async>
 </script>
