Update landing page for Spa Belleza integral L&M

--- a/spa-belleza-integral-lm-5db32202/index.html
+++ b/spa-belleza-integral-lm-5db32202/index.html
@@ -117,7 +117,7 @@
     <!-- HERO SECTION -->
     <section id="inicio" class="relative h-screen min-h-[700px] flex items-center overflow-hidden bg-slate-900">
         <div class="absolute inset-0">
-            <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=1600&q=80" class="w-full h-full object-cover" alt="Hero Background">
+            <img src="https://images.unsplash.com/photo-1544161515-4ab6ce6db874?auto=format&fit=crop&w=1600&q=80" class="w-full h-full object-cover" alt="Relajación en el Spa">
             <div class="absolute inset-0 bg-black/50 backdrop-blur-[2px]"></div>
         </div>
         
@@ -202,7 +202,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <!-- Main Service Card -->
                 <div class="md:col-span-2 relative overflow-hidden rounded-3xl group bento-card h-[400px]" data-aos="fade-up">
-                    <img src="https://images.unsplash.com/photo-1570172619644-dfd03ed5d881?auto=format&fit=crop&w=1000&q=80" class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Centro de Estética">
+                    <img src="https://images.unsplash.com/photo-1616394584738-fc6e612e71b9?auto=format&fit=crop&w=1000&q=80" class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Cuidado de la piel">
                     <div class="absolute inset-0 bg-gradient-to-t from-indigo-900/90 via-indigo-900/40 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-8 md:p-12 text-white">
                         <div class="bg-indigo-500 w-14 h-14 rounded-2xl flex items-center justify-center mb-6 shadow-lg shadow-indigo-500/30">
@@ -316,7 +316,7 @@
 
                 <div class="w-full lg:w-1/2 relative" data-aos="fade-left">
                     <div class="aspect-square md:aspect-video lg:aspect-square overflow-hidden rounded-[40px] shadow-2xl">
-                        <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=800&q=80" class="w-full h-full object-cover" alt="Nuestra estética">
+                        <img src="https://images.unsplash.com/photo-1512290923902-8a9f81dc236c?auto=format&fit=crop&w=800&q=80" class="w-full h-full object-cover" alt="Nuestras instalaciones profesionales">
                     </div>
                     <!-- Stat Float -->
                     <div class="absolute -bottom-10 -left-10 bg-white p-8 rounded-3xl shadow-xl hidden md:block animate-pulse-soft">
@@ -489,7 +489,7 @@
 <script
   src="https://hookloop-api.onrender.com/static/widget.js"
   data-workspace-id="ccb07c00-9d94-47ac-8fb9-5cd7124cbbf4"
-  data-artifact-id="fc6892da-e922-475e-8efb-d96023cbecca"
+  data-artifact-id="8b43004d-2a5d-42f7-b80f-e63e2b3707a1"
   data-lead-id="4e92f445-2f9f-4c34-bc3d-710e0e2b7adf"
   async>
 </script>
